# agent-arena

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: gym.yml  live.yml
data/archive/15m/: AAPL.parquet  MSFT.parquet  NVDA.parquet  QQQ.parquet  SPY.parquet  TSLA.parquet
data/archive/1h/: AAPL.parquet  MSFT.parquet  NVDA.parquet  QQQ.parquet  SPY.parquet  TSLA.parquet
data/archive/5m/: AAPL.parquet  MSFT.parquet  NVDA.parquet  QQQ.parquet  SPY.parquet  TSLA.parquet
data/ledger/: cycles.jsonl  matchdays.jsonl  promotions.jsonl  state.json  trades.jsonl
data/registry/: generations.jsonl
docs/: ginasio.html  index.html  pre-registration-season-1.md  preepoca.html
docs/adr/: 001-league-format-and-honesty-rules.md  002-gym-arena-learning-discipline.md
docs/data/: 2026-07-20.json  2026-07-21.json  2026-07-22.json  2026-07-23.json  2026-07-24.json  preseason.json
src/arena/: agents.py  bars.py  data.py  engine.py  gym.py  live.py  metrics.py  preseason.py  promote.py  registry.py  site.py
src/arena/templates/: arena.html  ginasio.html  preepoca.html
tests/: test_engine.py  test_live.py  test_metrics.py  test_no_lookahead.py  test_promote.py
